# NeuraForge-The_Digital_Frontier_of_Autonomous_Intelligence

./: .gitignore  Jenkinsfile  NeuraForge_Architecture.md  README.md  package-lock.json
implementation/backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  setup.py  start_server.bat  start_server.sh
implementation/backend/alembic/: env.py  script.py.mako
implementation/backend/alembic/versions/: 202410120001_create_memory_tables.py  202410130001_create_orchestrator_tables.py  202510140001_add_phase5_tables.py  202510140002_add_review_tables.py
implementation/backend/app/: __init__.py  dependencies.py  main.py
implementation/backend/app/agents/: base.py  contracts.py  creative.py  enterprise.py  finance.py  general.py  research.py
implementation/backend/app/api/: routes.py
implementation/backend/app/core/: audit.py  config.py  logging.py  metrics.py  rate_limit.py  security.py
implementation/backend/app/db/: __init__.py  models.py
implementation/backend/app/mcp/: router.py  symbols.py
implementation/backend/app/monitoring/: benchmark.py  orchestrator_report.py
implementation/backend/app/orchestration/: __init__.py  capabilities.json  context.py  dossier.py  dynamic_replanner.py  enums.py  graph.py  guardrails.py  handoff_protocol.py  lifecycle.py  llm_planner.py  meta.py  negotiation.py  parallel_executor.py  planner.py  planner_contract.py  review.py  routing.py  scheduler.py  simulation.py  state.py  store.py  tool_chain.py  tool_policy.py
implementation/backend/app/queue/: manager.py
implementation/backend/app/schemas/: agents.py  documents.py  negotiation.py  orchestrator.py  reviews.py  tasks.py
implementation/backend/app/services/: bootstrap.py  consolidation.py  disputes.py  document_ingestion.py  document_parser.py  embedding.py  enterprise_playbook.py  llm.py  mcp_client.py  memory.py  notifications.py  retrieval.py  scoring.py  tools.py  (+2 more)
implementation/backend/environments/: production.env.example  staging.env.example
implementation/backend/neuraforge/: __init__.py
implementation/backend/scripts/: _test_router.py  debug_routing.py  register_finance_tools.py  register_research_tools.py  run_memory_validation.py  run_memory_validation_local.ps1  run_meta_benchmark.py  tmp_frontend_test.json  tmp_hi_payload.json  tmp_stream_payload.json
implementation/backend/tests/: test_agent_contracts.py  test_agent_metadata.py  test_agent_routing.py  test_app_lifespan.py  test_benchmark.py  test_consolidation.py  test_contract_routes.py  test_creative_adapters.py  test_diagnostics.py  test_embeddings.py  test_enterprise_adapters.py  test_finance_adapter.py  test_finance_agent.py  test_mcp_client.py  test_memory.py  test_meta_integration.py  test_metrics.py  test_metrics_endpoint.py  test_orchestrator_planner.py  test_orchestrator_simulation.py  test_phase5_orchestration.py  test_planner_contract_fuzz.py  test_planner_contract_gatekeeper.py  test_planner_schema_migration.py  test_planner_tool_whitelist.py  test_research_adapters.py  test_research_agent.py  test_retrieval.py  test_review_metrics.py  test_review_metrics_endpoint.py  test_reviews.py  test_scoring.py  test_security_rate_limit.py  test_task_status.py  test_tasks.py  test_tool_adapter_base.py  test_tool_catalog_phase2.py  test_tool_catalog_store.py  test_tool_endpoints.py  test_tool_first_policy.py  (+4 more)
(+429 files in other folders)
