[tool.poetry]
name = "neuraforge"
version = "0.1.0"
description = "NeuraForge - Intelligent Multi-Agent System"
authors = ["NeuraForge Team"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
langchain-core = "^0.1.23"
redis = "^5.0.1"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
qdrant-client = "^1.7.0"
spacy = "^3.7.2"
sentence-transformers = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88
