[tool.poetry]
name = "neuraforge-backend"
version = "0.1.0"
description = "Backend services for NeuraForge autonomous intelligence platform"
authors = ["NeuraForge Team <team@neuraforge.local>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.5" }
pydantic = "^2.8.2"
pydantic-settings = "^2.5.2"
structlog = "^24.3.0"
redis = "^5.0.7"
asyncpg = "^0.29.0"
qdrant-client = { version = "^1.11.1", extras = ["grpc"] }
langchain = "^0.2.16"
langgraph = "^0.0.58"
langchain-community = "^0.2.16"
sentence-transformers = "^3.0.1"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
python-multipart = "^0.0.9"
numpy = "^1.26.4"
scipy = "^1.11.4"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
ruff = "^0.6.8"
coverage = "^7.6.0"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
