[tool.poetry]
name = "neuraforge-backend"
version = "0.1.0"
description = "Backend services for NeuraForge autonomous intelligence platform"
authors = ["NeuraForge Team <team@neuraforge.local>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.119.0"
uvicorn = { extras = ["standard"], version = "^0.37.0" }
pydantic = "^2.12.0"
pydantic-settings = "^2.11.0"
structlog = "^25.4.0"
redis = "^6.4.0"
asyncpg = "^0.30.0"
qdrant-client = { version = "^1.15.1", extras = ["grpc"] }
langchain = "^0.3.27"
langgraph = "^0.6.10"
langchain-community = "^0.3.31"
langchain-ollama = "^0.2.0"
sentence-transformers = "^5.1.1"
transformers = "4.56.0"
python-jose = { version = "^3.5.0", extras = ["cryptography"] }
python-multipart = "^0.0.20"
pyjwt = "^2.9.0"
matplotlib = "^3.9.2"
numpy = "^2.3.3"
scipy = "^1.16.2"
pandas = "^2.3.3"
python-dotenv = "^1.1.1"
prometheus-client = "^0.21.0"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"
ruff = "^0.14.0"
coverage = "^7.10.7"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
